5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1105.log
== TEST (2019-05-02 15:07:19) 
-- CODE:
var=input("descricao do brasao:"))
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"
if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:"leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao):
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 1
    var=input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:07:24) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"
if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:"leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao):
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 19
    print("Entrada:"leao)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:07:38) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"
if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao):
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 23
    print("Entrada:",dragao):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:07:49) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"
if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:10:01) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"
if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:10:15) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"
if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
	else:
		print("Entrada:",var)
		print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 13
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:10:38) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:12:17) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
elif()
	print("Entrada:",var)
	print("Brasao invalido")
	
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 14
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:12:37) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
	
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 14
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:12:49) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
	
elif(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 14
    elif()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:13:09) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:15:21) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
elif(var!=lobo) or (var!=leao) or (var!=veado) or (var!=dragao) or (var!=rosa) or (var!=sol) or (var!=lula) or (var!=esfolado) or (var!=turta):
		print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- ERROR:
File "XXXX", line 16
    print("Brasao invalido")
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:15:27) 
-- CODE:
var=input("descricao do brasao:")
lobo="Stark"
leao="Lannister"
veado="Baratheon"
dragao="targaryen"
rosa="Tyrell"
sol="Martell"
lula="Greyjoy"
esfolado="Bolton"
turta="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
elif(var!=lobo) or (var!=leao) or (var!=veado) or (var!=dragao) or (var!=rosa) or (var!=sol) or (var!=lula) or (var!=esfolado) or (var!=turta):
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",lobo)
elif(var==leao):
	print("Entrada:",leao)
elif(var==veado):
	print("Entrada:",veado)
elif(var==dragao):
	print("Entrada:",dragao)
elif(var==rosa):
	print("Entrada:",rosa)
elif(var==sol):
	print("Entrada:",sol)
elif(var==lula):
	print("Entrada:",lula)
elif(var==esfolado):
	print("Entrada:",esfolado)

-- OUTPUT:
Entrada: lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:18:00) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",q)
elif(var==leao):
	print("Entrada:",w)
elif(var==veado):
	print("Entrada:",e)
elif(var==dragao):
	print("Entrada:",r)
elif(var==rosa):
	print("Entrada:",t)
elif(var==sol):
	print("Entrada:",y)
elif(var==lula):
	print("Entrada:",u)
elif(var==esfolado):
	print("Entrada:",i)
elif(var==turta):
	print("Entrada:",o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(var==lobo) or (var==leao) or (var==veado) or (var==dragao) or (var==rosa) or (var==sol) or (var==lula) or(var==esfolado) or (var==turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:19:26) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",q)
elif(var==leao):
	print("Entrada:",w)
elif(var==veado):
	print("Entrada:",e)
elif(var==dragao):
	print("Entrada:",r)
elif(var==rosa):
	print("Entrada:",t)
elif(var==sol):
	print("Entrada:",y)
elif(var==lula):
	print("Entrada:",u)
elif(var==esfolado):
	print("Entrada:",i)
elif(var==turta):
	print("Entrada:",o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    if(var==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:19:32) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var==lobo):
	print("Entrada:",q)
elif(var==leao):
	print("Entrada:",w)
elif(var==veado):
	print("Entrada:",e)
elif(var==dragao):
	print("Entrada:",r)
elif(var==rosa):
	print("Entrada:",t)
elif(var==sol):
	print("Entrada:",y)
elif(var==lula):
	print("Entrada:",u)
elif(var==esfolado):
	print("Entrada:",i)
elif(var==turta):
	print("Entrada:",o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    if(var==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:20:56) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Entrada:",q)
elif(var=="leao"):
	print("Entrada:",w)
elif(var=="veado"):
	print("Entrada:",e)
elif(var=="dragao"):
	print("Entrada:",r)
elif(var=="rosa"):
	print("Entrada:",t)
elif(var=="sol"):
	print("Entrada:",y)
elif(var=="lula"):
	print("Entrada:",u)
elif(var=="esfolado"):
	print("Entrada:",i)
elif(var=="turta"):
	print("Entrada:",o)
-- OUTPUT:
Entrada lula
Entrada: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:22:33) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:22:38) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- EXECUTION TIME:
0.134556
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada dragao
Casa: targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:23:20) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- OUTPUT:
Entrada lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:23:38) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada:",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:23:41) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada:",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- EXECUTION TIME:
0.198592
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:23:49) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada:",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:24:11) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="Targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada:",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:24:15) 
-- CODE:
var=input("descricao do brasao:")
q="Stark"
w="Lannister"
e="Baratheon"
r="Targaryen"
t="Tyrell"
y="Martell"
u="Greyjoy"
i="Bolton"
o="Tully"

if(var=="lobo") or (var=="leao") or (var=="veado") or (var=="dragao") or (var=="rosa") or (var=="sol") or (var=="lula") or(var=="esfolado") or (var=="turta"):
	print("Entrada:",var)
else:
	print("Entrada:",var)
	print("Brasao invalido")
if(var=="lobo"):
	print("Casa:",q)
elif(var=="leao"):
	print("Casa:",w)
elif(var=="veado"):
	print("Casa:",e)
elif(var=="dragao"):
	print("Casa:",r)
elif(var=="rosa"):
	print("Casa:",t)
elif(var=="sol"):
	print("Casa:",y)
elif(var=="lula"):
	print("Casa:",u)
elif(var=="esfolado"):
	print("Casa:",i)
elif(var=="turta"):
	print("Casa:",o)
-- EXECUTION TIME:
0.170452
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
